# src

./: .gitignore  .gitignore.rtf  BUILDING  BUILDING.html  BUILDING.mdoc  BUILDING.txt  CHANGES-1.3.2  CHANGES-1.3.3  CHANGES-1.3.4  CHANGES-1.4.1  CHANGES-1.4.2  CHANGES-1.4.3  CHANGES-1.4.4  CHANGES-1.5.1  CHANGES-1.5.2  CHANGES-1.5.3  CHANGES-1.5.4  MAXPHYS-NOTES  Makefile  Makefile.inc  PATCHLEVEL  README.md  UPDATING  build.sh  cjs-build-against-obj-dir-affected-files  contrib.txt
compat/: Makefile  Makefile.common  Makefile.compat  Makefile.m32  Makefile.md_subdir  README  archdirs.mk  build-makefiles  compatsubdir.mk  exec.mk  m32.mk
compat/dirshack/: Makefile
compat/lib/: Makefile  Makefile.inc
crypto/: Makefile.openssl  TODO
distrib/: Makefile  Makefile.inc
distrib/acorn26/: Makefile
distrib/acorn32/: Makefile  Makefile.inc  gzip_ff8.bin.uue  mksparkive.sh
distrib/alpha/: Makefile  README.files
distrib/amd64/: Makefile
distrib/amiga/: Makefile
distrib/arc/: Makefile
distrib/arm32/: Makefile  Makefile.inc
distrib/atari/: Makefile  Makefile.inc
distrib/bebox/: Makefile
distrib/cats/: Makefile
distrib/cdrom/: 1.6.1.conf  1.6.2.conf  2.0.conf  2.1.conf  3.0.1.conf  3.0.2.conf  3.0.3.conf  3.0.conf  3.1.1.conf  3.1.conf  4.0.1.conf  4.0.conf  5.0.1.conf  5.0.conf  Makefile  NetBSD-1.5.mk  NetBSD-1.6.1.mk  NetBSD-1.6.2.mk  NetBSD-1.6.mk  NetBSD-2.0.mk  NetBSD-2.1.mk  NetBSD-3.0.1.mk  NetBSD-3.0.2.mk  NetBSD-3.0.3.mk  NetBSD-3.0.mk  NetBSD-3.1.1.mk  NetBSD-3.1.mk  NetBSD-4.0.1.mk  NetBSD-4.0.mk  NetBSD-5.0.1.mk  NetBSD-5.0.mk  NetBSD-9.0.mk  NetBSD-current.mk  README  boothfs.uue  current.conf  example.conf  hfsmap.lst  hide-hfs.lst  hide-iso.lst  (+1 more)
distrib/cobalt/: Makefile
distrib/common/: 99-print-sysinst  MAKEDEV.wrapper  MAKEDEV.wrapper.local  Makefile.bootcd  Makefile.crunch  Makefile.dhcpcd  Makefile.distrib  Makefile.image  Makefile.makedev  Makefile.mdset  Makefile.minirootkmod  Makefile.parselist  Makefile.tarfloppy  buildfloppies.sh  cgdroot.rc  list.cgdroot  list.dhcpcd  list.makedev  list.sysinst  list.sysinst.en  list.zfsroot  makedev2spec.awk  mkprotocols  mktermcap  mtree.cgdroot  mtree.common  mtree.zfsroot  parselist.awk  protocols  services  sunbootcd.sh  termcap  termcap.mini  zfsroot.rc
distrib/crunch/: Makefile.inc
distrib/dreamcast/: Makefile
distrib/emips/: Makefile
distrib/evbarm/: Makefile
distrib/evbmips/: Makefile
distrib/evbppc/: Makefile
distrib/evbsh3/: Makefile
distrib/ews4800mips/: Makefile
distrib/hp300/: HP-IB.geometry  Makefile  Makefile.inc
distrib/hp700/: Makefile
distrib/hpcarm/: Makefile
distrib/hpcmips/: Makefile  Makefile.inc
distrib/hpcsh/: Makefile
distrib/hppa/: Makefile
doc/: 3RDPARTY  BRANCHES  BUILDING.mdoc  CHANGES  CHANGES-1.6.1  CHANGES-1.6.2  CHANGES-1.6.3  CHANGES-10.0  CHANGES-10.1  CHANGES-2.0  CHANGES-2.0.1  CHANGES-2.0.2  CHANGES-2.0.3  CHANGES-2.0.4  CHANGES-2.1  CHANGES-2.1.1  CHANGES-2.2  CHANGES-3.0  CHANGES-3.0.1  CHANGES-3.0.2  CHANGES-3.0.3  CHANGES-3.0.4  CHANGES-3.1  CHANGES-3.1.1  CHANGES-3.1.2  CHANGES-3.2  CHANGES-4.0  CHANGES-4.0.1  CHANGES-4.0.2  CHANGES-4.1  CHANGES-5.0  CHANGES-5.0.1  CHANGES-5.0.2  CHANGES-5.0.3  CHANGES-5.1  CHANGES-5.1.1  CHANGES-5.1.2  CHANGES-5.1.3  CHANGES-5.1.4  CHANGES-5.1.5  (+68 more)
etc/: COPYRIGHT  MAKEDEV.awk  MAKEDEV.local  MAKEDEV.subr.tmpl  MAKEDEV.tmpl  Makefile  Makefile.params  aliases  audit-packages.conf  auto_master  bootptab  changelist  crontab  daily  daily.conf  devfsd.conf  disktab  dm.conf  envsys.conf  floppytab  ftpchroot  ftpusers  gettytab  gpio.conf  group  hosts  hosts.equiv  inetd.conf  ld.so.conf  lkm.conf  locate.conf  login.conf  mailer.conf  makespec  man.conf  master.passwd  mkttys  monthly  monthly.conf  motd  (+45 more)
extsrc/: Makefile  Makefile.extsrc
games/: Makefile  Makefile.inc
gnu/: Makefile  README  toolchain2netbsd
include/: Makefile  a.out.h  aio.h  ar.h  assert.h  atomic.h  bitstring.h  bm.h  cdbr.h  cdbw.h  complex.h  cpio.h  ctype.h  db.h  dirent.h  disktab.h  dlfcn.h  endian.h  err.h  errno.h  fenv.h  fmtmsg.h  fnmatch.h  fstab.h  fts.h  getopt.h  glob.h  grp.h  hesiod.h  iconv.h  ieeefp.h  ifaddrs.h  inttypes.h  iso646.h  kvm.h  langinfo.h  libgen.h  limits.h  link.h  link_aout.h  (+76 more)
lib/: Makefile  Makefile.inc  bumpversion  checkoldver  checkver  checkvers  mkvermap
libexec/: Makefile  Makefile.inc
regress/: Makefile  README
rescue/: Makefile  list  list.bim  list.crypto  list.edlabel  list.fdisk  list.inet6  list.ldconfig  list.ldd  list.ldd.noaout  list.pdisk  mkterminfo  pathnames.h  terminfo
sbin/: Makefile  Makefile.inc
share/: Makefile  Makefile.inc
sys/: DMA-added-files  DMA-affected-files  FILES.scsipi  Makefile  README.DEVVP  README.kernelauth  STATUS  bouyer-ide.files  ctxsw_README  kqueue-todo  newlock2-TODO  sa-TODO  scsipi_tested
tests/: Atffile  Makefile  Makefile.inc  README  h_macros.h
tools/: Makefile  Makefile.disklabel  Makefile.gmakehost  Makefile.gnuhost  Makefile.gnuwrap  Makefile.host  Makefile.inc  Makefile.nbincludes  Makefile.tools  README  headerlist  mkheaderlist.sh
tools/compat/: Makefile  README  aclocal.m4  cdbr.h  cdbw.h  compat_defs.h  compat_fts.h  compat_getopt.h  compat_netbsd.h  compat_pwd.h  compat_vis.h  config.h.in  configure  configure.ac  db.h  defs.mk.in  dprintf.c  err.c  fgetln.c  flock.c  fparseln.c  fpurge.c  fts.h  getmode.c  getopt.h  glob.h  issetugid.c  lchflags.c  lchmod.c  lchown.c  md2.h  md4.h  md5.h  namespace.h  nb_progname.c  nb_rmd.c  nbtool_config.h  nbtool_config.h.in  nbtool_config_internal.h.in  nl_types.h  (+13 more)
tools/compat/buildaux/: nb_check_cc_flag.m4
tools/compat/crypto/: rmd160.h  sha2.h
tools/compat/dev/: clock_subr.h
tools/compat/scripts/: mktemp
tools/compat/sys/: disklabel_mbr.h  endian.h  null.h  rbtree.h  sha1.h  time.h
tools/host-mkdep/: Makefile  configure  configure.ac  host-mkdep.in
tools/make/: Makefile.regen  aclocal.m4  buildmake.sh.in  configure  configure.ac
usr.bin/: Makefile  Makefile.inc
usr.sbin/: Makefile  Makefile.inc
x11/: Makefile  Makefile.inc  TODO
(+72314 files in other folders)
